--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-This is a very basic authority server built with Node.js
+This is an implementation of a dynamic dns server in node.js.
 
-The dev branch is more interesting, but also broken as of 2010-09-01
+The data is stored in the file dyndnsdata. The dns updates can be done on http and https.
